gtest_dep = dependency('gtest', main : true, required : false)

client_api = executable('client_api', 'client_api.cpp', dependencies: [matrix_client_dep, gtest_dep])
media_api = executable('media_api', 'media_api.cpp', dependencies: [matrix_client_dep, gtest_dep])
e2ee = executable('e2ee', 'e2ee.cpp', dependencies: [matrix_client_dep, gtest_dep])
utils = executable('utils', 'utils.cpp', dependencies: [matrix_client_dep, gtest_dep])
pushrules = executable('pushrules', 'pushrules.cpp', dependencies: [matrix_client_dep, gtest_dep])
connection = executable('connection', 'connection.cpp', dependencies: [matrix_client_dep, gtest_dep])
identifiers = executable('identifiers', 'identifiers.cpp', dependencies: [matrix_client_dep, gtest_dep])
events = executable('events', 'events.cpp', dependencies: [matrix_client_dep, gtest_dep])
messages = executable('messages', 'messages.cpp', dependencies: [matrix_client_dep, gtest_dep])
responses = executable('responses', 'responses.cpp', dependencies: [matrix_client_dep, gtest_dep])
requests = executable('requests', 'requests.cpp', dependencies: [matrix_client_dep, gtest_dep])
errors = executable('errors', 'errors.cpp', dependencies: [matrix_client_dep, gtest_dep])
crypto = executable('crypto', 'crypto.cpp', dependencies: [matrix_client_dep, gtest_dep])

test('connection', connection, protocol: 'gtest', suite: 'network', is_parallel: false)
test('client_api', client_api, protocol: 'gtest', suite: 'network', is_parallel: false, timeout: 300)
test('media_api', media_api, protocol: 'gtest', suite: 'network', is_parallel: false,env: ['FIXTURE_PREFIX='+meson.current_source_dir()])
test('e2ee', e2ee, protocol: 'gtest', suite: 'network', is_parallel: false)
test('pushrules', pushrules, protocol: 'gtest', suite: 'network', is_parallel: false)

test('crypto', crypto, protocol: 'gtest', suite: 'nonetwork')
test('errors', errors, protocol: 'gtest', suite: 'nonetwork')
test('requests', requests, protocol: 'gtest', suite: 'nonetwork')
test('responses', responses, protocol: 'gtest', suite: 'nonetwork',env: ['FIXTURE_PREFIX='+meson.current_source_dir()])
test('messages', messages, protocol: 'gtest', suite: 'nonetwork')
test('events', events, protocol: 'gtest', suite: 'nonetwork')
test('identifiers', identifiers, protocol: 'gtest', suite: 'nonetwork')
test('utils', utils, protocol: 'gtest', suite: 'nonetwork')
